<resources>

    <string name="app_name">XO</string>
    <string name="empty" />
    <string name="beast_mode">Beast Mode</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="play_again">Play Again!</string>
    <string name="reset_score">Reset Score</string>
    <string name="o">O:</string>
    <string name="_0">0</string>
    <string name="x">X:</string>
    <string name="x_turn">X Turn</string>
    <string name="select_info">U can now select one of these bigger boxes bla bla bla</string>
    <string name="single_player"><font size="40">Single Player</font></string>
    <string name="two_player"><font size="20">TWO PLAYERS</font>\n\<font size="10">(Same Device)</font></string>
    <string name="two_player_online"><font size="30">TWO PLAYERS</font>\n\<font size="15">(Online)</font></string>
    <string name="selectdifficultlevel">Select Difficulty Level</string>
    <string name="easy">Beginner</string>
    <string name="hard">Expert</string>
    <string name="medium">Intermediate</string>
    <string name="web_client_id">517381114834-orgl73rrvn39j4sknjb6fhj6691ocsff.apps.googleusercontent.com</string>
    <string name="title_activity_beast_one_peasy_game">BeastOnePEasyGame</string>

</resources>
