<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_onepmenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="40dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.beast.tictactoe.xo.onepmenu"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectdifficultlevel"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/easyb"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/hardb"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/hard"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="20sp" />

</LinearLayout>
